<!--
 * Copyright (C) 2015 arun@siara.cc
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 * 
 * @author Arundale R.
 *
 * -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:fillViewport="true"
    tools:context="cc.siara.csv_ml_demo.MainActivity" >

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:overScrollMode="ifContentScrolls"
      android:paddingBottom="@dimen/activity_vertical_margin"
      android:paddingLeft="@dimen/activity_horizontal_margin"
      android:paddingRight="@dimen/activity_horizontal_margin"
      android:paddingTop="@dimen/activity_vertical_margin"
      android:scrollbarAlwaysDrawVerticalTrack="false" >

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_csv" />

    <Spinner
        android:id="@+id/spExamples"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tvInput"
        android:layout_marginLeft="21dp"
        android:layout_toRightOf="@+id/tvInput"
        android:entries="@array/input_examples"
        android:prompt="@string/input_csv" />

    <EditText
        android:id="@+id/etInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvInput"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/spExamples"
        android:ems="10"
        android:inputType="textMultiLine"
        android:minLines="4"
        android:scrollHorizontally="true"
        android:singleLine="false" >

    </EditText>

    <Button
        android:id="@+id/btnDDLDML"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etInput"
        android:layout_below="@+id/etInput"
        android:text="@string/b_ddl_dml" />

    <Button
        android:id="@+id/btnJSON"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btnDDLDML"
        android:layout_toRightOf="@+id/btnDDLDML"
        android:text="@string/b_json" />

    <Button
        android:id="@+id/btnXML"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnJSON"
        android:layout_alignBottom="@+id/btnJSON"
        android:layout_toRightOf="@+id/btnJSON"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:text="@string/b_xml" />

    <Button
        android:id="@+id/btnXPath"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btnDDLDML"
        android:text="@string/b_xpath"/>

    <EditText
        android:id="@+id/etXPath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnXPath"
        android:layout_toRightOf="@+id/btnXPath"
        android:ems="10"
        android:inputType="text"
        android:singleLine="true" />

    <TextView
        android:id="@+id/tvOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnXPath"
        android:layout_below="@+id/btnXPath"
        android:text="@string/tv_output" />

    <EditText
        android:id="@+id/etOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvOutput"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvOutput"
        android:ems="10"
        android:inputType="textMultiLine"
        android:minLines="3"
        android:overScrollMode="ifContentScrolls"
        android:scrollHorizontally="true"
        android:singleLine="false" >

    </EditText>

    <Button
        android:id="@+id/btnXMLtoCSV"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etOutput"
        android:layout_below="@+id/etOutput"
        android:text="@string/b_xml2csv" />

    <CheckBox
        android:id="@+id/cbPretty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnXML"
        android:layout_alignBottom="@+id/btnXML"
        android:layout_toRightOf="@+id/btnXML"
        android:checked="true"
        android:text="@string/cbPretty" />

  </RelativeLayout>

</ScrollView>
